public class Shipping {
    private String deliveryMethod;

    public Shipping(String deliveryMethod) {
        this.deliveryMethod = deliveryMethod;
    }

    public String getDeliveryMethod() {
        return deliveryMethod;
    }
}
